# flux

./: CMakeLists.txt
capi/: flux_api.cu  flux_api.h
include/flux/: flux.h  gemm_operator_base.h  op_registry.h
include/flux/cuda/: cuda_common_device.hpp
include/flux/cuda/gemm_impls/: gemm_operator_base_default_impl.hpp
src/: CMakeLists.txt
src/cuda/: CMakeLists.txt
src/reduce_scatter/: sm90_reduce_scatter_utils.hpp
